// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Passcode check if layout is matching with snapshot when Wallet doesn't exist 1`] = `
<div>
  <div
    class="fixed inset-0 backdrop-blur-sm bg-black bg-opacity-40 flex flex-col items-center justify-center z-50 h-screen"
    data-testid="passcode-page"
  >
    <div
      class="rounded-2xl bg-white flex flex-col items-center justify-start relative w-[90%] sm:w-[85%] md:w-[90%] h-fit max-h-[99vh] sm:max-h-[98vh] overflow-y-hidden shadow-iw-pin-page-container"
    >
      <div
        class="overflow-hidden absolute inset-0 z-0 flex items-center justify-center pointer-events-none"
        data-testid="backdrop-passcode"
      >
        <div
          class="absolute"
          style="top: 73px;"
        >
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-0"
            style="width: 96px; height: 96px; border-width: 1px; border-color: rgba(228, 231, 236, 0.8); top: calc(50% - 48px); left: calc(50% - 48px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-1"
            style="width: 192px; height: 192px; border-width: 1px; border-color: rgba(228, 231, 236, 0.7000000000000001); top: calc(50% - 96px); left: calc(50% - 96px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-2"
            style="width: 288px; height: 288px; border-width: 1px; border-color: rgba(228, 231, 236, 0.6000000000000001); top: calc(50% - 144px); left: calc(50% - 144px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-3"
            style="width: 384px; height: 384px; border-width: 1px; border-color: rgba(228, 231, 236, 0.5); top: calc(50% - 192px); left: calc(50% - 192px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-4"
            style="width: 480px; height: 480px; border-width: 1px; border-color: rgba(228, 231, 236, 0.4); top: calc(50% - 240px); left: calc(50% - 240px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-5"
            style="width: 576px; height: 576px; border-width: 1px; border-color: rgba(228, 231, 236, 0.30000000000000004); top: calc(50% - 288px); left: calc(50% - 288px);"
          />
          <div
            class="flex items-center justify-center"
            data-testid="logo-inji-web-container"
          >
            <img
              alt="Inji Web Logo"
              data-testid="logo-inji-web"
              src="Logomark.png"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-start w-full mt-44 sm:mt-48 relative z-10 pb-0 sm:pb-8"
      >
        <div
          class="text-center space-y-5 relative w-full max-w-lg px-4 sm:px-0"
        >
          <h1
            class="text-[36px] leading-[44px] tracking-[-0.02em] font-bold text-iw-darkGrayishBlue"
            data-testid="title-passcode"
          >
            Set Passcode
          </h1>
          <p
            class="text-iw-textTertiary text-[16px] leading-[24px] font-semibold mx-8"
            data-testid="passcode-description"
          >
            Set your passcode to get started
          </p>
        </div>
        <div
          class="flex flex-col bg-white sm:rounded-lg sm:shadow-iw-pin-page-container items-center z-20 w-full max-w-lg mt-8 mb-4 mx-auto border-t border-iw-grayishBlue mx-8"
          data-testid="passcode-inputs-container"
        >
          <div
            class="w-full px-4 sm:px-8 py-3 sm:py-5 md:py-7 space-y-4 flex flex-col items-center"
          >
            <div
              class="flex flex-col gap-3.5"
            >
              <div
                class="w-full mx-auto flex flex-col gap-4"
              >
                <div
                  class="flex justify-center gap-x-2 min-w-fit"
                >
                  <div
                    class="mb-2"
                    data-testid="passcode-container"
                  >
                    <p
                      class="text-sm text-left font-medium text-iw-textSecondary"
                      data-testid="label-passcode"
                    >
                      Enter Passcode
                    </p>
                    <div
                      class="flex items-center gap-2 sm:gap-3.5"
                    >
                      <div
                        class="flex items-stretch gap-2 sm:gap-3.5 py-2 rounded-lg"
                      >
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center gap-4 py-2 rounded-lg"
                      >
                        <button
                          class="pin-input-box-border pin-input-box-style flex items-center justify-center focus:outline-none"
                          data-testid="btn-toggle-visibility-passcode"
                          type="button"
                        >
                          <svg
                            class="text-iw-grayLight"
                            data-testid="eye-view-slash"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 640 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-center gap-x-2 min-w-fit"
                >
                  <div
                    class="mb-2"
                    data-testid="confirm-passcode-container"
                  >
                    <p
                      class="text-sm text-left font-medium text-iw-textSecondary"
                      data-testid="label-confirm-passcode"
                    >
                      Confirm Passcode
                    </p>
                    <div
                      class="flex items-center gap-2 sm:gap-3.5"
                    >
                      <div
                        class="flex items-stretch gap-2 sm:gap-3.5 py-2 rounded-lg"
                      >
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-confirm-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-confirm-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-confirm-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-confirm-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-confirm-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                        <input
                          class="pin-input-box-style pin-input-box-border focus:outline-none"
                          data-testid="input-confirm-passcode"
                          inputmode="numeric"
                          maxlength="1"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center gap-4 py-2 rounded-lg"
                      >
                        <button
                          class="pin-input-box-border pin-input-box-style flex items-center justify-center focus:outline-none"
                          data-testid="btn-toggle-visibility-confirm-passcode"
                          type="button"
                        >
                          <svg
                            class="text-iw-grayLight"
                            data-testid="eye-view-slash"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 640 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-full"
              >
                <div
                  class="w-full"
                >
                  <button
                    class="w-full text-center items-center text-iw-text font-bold px-6 py-2 shadow text-white mr-1 rounded-lg false bg-gray-400 cursor-not-allowed grayscale"
                    data-testid="btn-submit-passcode"
                    disabled=""
                  >
                    <div
                      class="flex items-center justify-center gap-1.5"
                    >
                      <span>
                        submit
                      </span>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Passcode check if layout is matching with snapshot when Wallet exists 1`] = `
<div>
  <div
    class="fixed inset-0 backdrop-blur-sm bg-black bg-opacity-40 flex flex-col items-center justify-center z-50 h-screen"
    data-testid="passcode-page"
  >
    <div
      class="rounded-2xl bg-white flex flex-col items-center justify-start relative w-[90%] sm:w-[85%] md:w-[90%] h-fit max-h-[99vh] sm:max-h-[98vh] overflow-y-hidden shadow-iw-pin-page-container"
    >
      <div
        class="overflow-hidden absolute inset-0 z-0 flex items-center justify-center pointer-events-none"
        data-testid="backdrop-passcode"
      >
        <div
          class="absolute"
          style="top: 73px;"
        >
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-0"
            style="width: 96px; height: 96px; border-width: 1px; border-color: rgba(228, 231, 236, 0.8); top: calc(50% - 48px); left: calc(50% - 48px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-1"
            style="width: 192px; height: 192px; border-width: 1px; border-color: rgba(228, 231, 236, 0.7000000000000001); top: calc(50% - 96px); left: calc(50% - 96px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-2"
            style="width: 288px; height: 288px; border-width: 1px; border-color: rgba(228, 231, 236, 0.6000000000000001); top: calc(50% - 144px); left: calc(50% - 144px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-3"
            style="width: 384px; height: 384px; border-width: 1px; border-color: rgba(228, 231, 236, 0.5); top: calc(50% - 192px); left: calc(50% - 192px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-4"
            style="width: 480px; height: 480px; border-width: 1px; border-color: rgba(228, 231, 236, 0.4); top: calc(50% - 240px); left: calc(50% - 240px);"
          />
          <div
            class="absolute rounded-full border overflow-hidden"
            data-testid="backdrop-passcode-circle-5"
            style="width: 576px; height: 576px; border-width: 1px; border-color: rgba(228, 231, 236, 0.30000000000000004); top: calc(50% - 288px); left: calc(50% - 288px);"
          />
          <div
            class="flex items-center justify-center"
            data-testid="logo-inji-web-container"
          >
            <img
              alt="Inji Web Logo"
              data-testid="logo-inji-web"
              src="Logomark.png"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-start w-full mt-44 sm:mt-48 relative z-10 pb-0 sm:pb-8"
      >
        <div
          class="text-center space-y-5 relative w-full max-w-lg px-4 sm:px-0"
        >
          <h1
            class="text-[36px] leading-[44px] tracking-[-0.02em] font-bold text-iw-darkGrayishBlue"
            data-testid="title-passcode"
          >
            Enter Passcode
          </h1>
          <p
            class="text-iw-textTertiary text-[16px] leading-[24px] font-semibold mx-8"
            data-testid="passcode-description"
          >
            Enter your 6 digit passcode
          </p>
        </div>
        <div
          class="flex flex-col bg-white sm:rounded-lg sm:shadow-iw-pin-page-container items-center z-20 w-full max-w-lg mt-8 mb-4 mx-auto border-t border-iw-grayishBlue mx-8"
          data-testid="passcode-inputs-container"
        >
          <div
            class="w-full px-4 sm:px-8 py-3 sm:py-5 md:py-7 space-y-4 flex flex-col items-center"
          >
            <div
              class="flex flex-col gap-3.5"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
